--- a/portfolio.html
+++ b/portfolio.html
@@ -16,173 +16,181 @@
   <body>
     <!-- header section -->
     <header class="header">
-      <nav class="nav">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-twopart">Studio</span></a
-        >
-        <ul class="list">
-          <li><a class="nav-list link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="nav-list link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="nav-list link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="nav">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-twopart">Studio</span></a
+          >
+          <ul class="list">
+            <li><a class="nav-list link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="nav-list link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="nav-list link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="address">
+          <ul class="list">
+            <li>
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main section -->
     <main>
       <section>
-        <h1 hidden>buttons</h1>
-        <ul class="list">
-          <li><button class="button" type="button">All</button></li>
-          <li><button class="button" type="button">Web Site</button></li>
-          <li><button class="button" type="button">App</button></li>
-          <li><button class="button" type="button">Design</button></li>
-          <li><button class="button" type="button">Marketing</button></li>
-        </ul>
+        <div class="container">
+          <h1 hidden>buttons</h1>
+          <ul class="list">
+            <li><button class="button" type="button">All</button></li>
+            <li><button class="button" type="button">Web Site</button></li>
+            <li><button class="button" type="button">App</button></li>
+            <li><button class="button" type="button">Design</button></li>
+            <li><button class="button" type="button">Marketing</button></li>
+          </ul>
 
-        <!-- picture section -->
+          <!-- picture section -->
 
-        <ul class="list">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/banking.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">
-                Banking App Interface Concept
-              </h2>
-              <p class="portfolio-picture-p">App</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/cashlespay.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Cashless Payment</h2>
-              <p class="portfolio-picture-p">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/meditapp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+          <ul class="list">
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/banking.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">
+                  Banking App Interface Concept
+                </h2>
+                <p class="portfolio-picture-p">App</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/cashlespay.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">Cashless Payment</h2>
+                <p class="portfolio-picture-p">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/meditapp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
 
-              <h2 class="portfolio-picture-title">Meditation App</h2>
-              <p class="portfolio-picture-p">App</p></a
-            >
-          </li>
+                <h2 class="portfolio-picture-title">Meditation App</h2>
+                <p class="portfolio-picture-p">App</p></a
+              >
+            </li>
 
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Taxi Service</h2>
-              <p class="portfolio-picture-p">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/scrillustr.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Screen Illustrations</h2>
-              <p class="portfolio-picture-p">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/online.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Online Courses</h2>
-              <p class="portfolio-picture-p">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/instagram.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Instagram Stories Concept</h2>
-              <p class="portfolio-picture-p">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/organic.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Organic Food</h2>
-              <p class="portfolio-picture-p">Web Site</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfoliopictures/coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-picture-title">Fresh Coffee</h2>
-              <p class="portfolio-picture-p">Web Site</p></a
-            >
-          </li>
-        </ul>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">Taxi Service</h2>
+                <p class="portfolio-picture-p">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/scrillustr.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">Screen Illustrations</h2>
+                <p class="portfolio-picture-p">Design</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">Online Courses</h2>
+                <p class="portfolio-picture-p">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/instagram.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">
+                  Instagram Stories Concept
+                </h2>
+                <p class="portfolio-picture-p">Design</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/organic.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">Organic Food</h2>
+                <p class="portfolio-picture-p">Web Site</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/portfoliopictures/coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-picture-title">Fresh Coffee</h2>
+                <p class="portfolio-picture-p">Web Site</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer section -->
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-footer-twopart">Studio</span></a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-footer-twopart">Studio</span></a
+        >
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
