--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- header section -->
     <header class="header">
-      <div class="container">
+      <div class="container header-containet">
         <nav class="nav">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-twopart">Studio</span></a
