--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="logo link" href="./index.html"
             >Web<span class="logo-twopart">Studio</span></a
           >
-          <ul class="list">
+          <ul class="list header-list">
             <li><a class="nav-list link" href="./index.html">Studio</a></li>
             <li>
               <a class="nav-list link" href="./portfolio.html">Portfolio</a>
@@ -38,7 +38,7 @@
         </nav>
 
         <address class="address">
-          <ul class="list">
+          <ul class="list header-list">
             <li>
               <a class="address-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
