--- a/index.html
+++ b/index.html
@@ -63,32 +63,32 @@
         </div>
       </section>
       <!-- section two -->
-      <section>
+      <section class="two-section">
         <div class="container">
           <h2 class="hidden-title" hidden>Strategy</h2>
-          <ul class="list">
-            <li>
+          <ul class="list two-list">
+            <li class="two-list-li">
               <h3 class="two-title">Strategy</h3>
               <p class="p-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="two-list-li">
               <h3 class="two-title">Punctuality</h3>
               <p class="p-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="two-list-li">
               <h3 class="two-title">Diligence</h3>
               <p class="p-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="two-list-li">
               <h3 class="two-title">Technologies</h3>
               <p class="p-text">
                 Design practice focused on digital experiences. We bring forth a
