--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
       </section>
 
       <!-- section three -->
-      <section>
+      <section class="three-section">
         <div class="container">
           <h2 class="tree-title">What are we doing</h2>
-          <ul class="list">
-            <li>
+          <ul class="list three-list">
+            <li class="three-list-li">
               <img
                 src="./images/about/desctop.jpg"
                 alt="computer"
@@ -112,7 +112,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="three-list-li">
               <img
                 src="./images/about/phone.jpg"
                 alt="smartphone"
@@ -120,7 +120,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="three-list-li">
               <img
                 src="./images/about/laptop.jpg"
                 alt="laptope"
@@ -135,7 +135,7 @@
       <section class="team-section">
         <div class="container">
           <h2 class="section-team-title">Our Team</h2>
-          <ul class="list">
+          <ul class="list four-list">
             <li class="team-list">
               <img
                 src="./images/our.team/mark.jpg"
