--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-title">Mark Guerrero</h3>
-              <p class="p-text">Product Designer</p>
+              <div class="four-div">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="p-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -153,8 +155,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-title">Tom Ford</h3>
-              <p class="p-text">Frontend Developer</p>
+              <div class="four-div">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="p-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -163,8 +167,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-title">Camila Garcia</h3>
-              <p class="p-text">Marketing</p>
+              <div class="four-div">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="p-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -173,8 +179,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-title">Daniel Wilson</h3>
-              <p class="p-text">UI Designer</p>
+              <div class="four-div">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="p-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -184,10 +192,10 @@
     <!-- footer section -->
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html"
+        <a class="logo link footer-link" href="./index.html"
           >Web<span class="logo-footer-twopart">Studio</span></a
         >
-        <p>
+        <p class="footer-p">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
