--- a/portfolio.html
+++ b/portfolio.html
@@ -5,23 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- header section -->
     <header class="header">
-      <div class="container">
+      <div class="container header-containet">
         <nav class="nav">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-twopart">Studio</span></a
           >
-          <ul class="list">
+          <ul class="list header-list">
             <li><a class="nav-list link" href="./index.html">Studio</a></li>
             <li>
               <a class="nav-list link" href="./portfolio.html">Portfolio</a>
@@ -31,7 +39,7 @@
         </nav>
 
         <address class="address">
-          <ul class="list">
+          <ul class="list header-list">
             <li>
               <a class="address-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
