--- a/portfolio.html
+++ b/portfolio.html
@@ -56,10 +56,10 @@
     </header>
     <!-- Main section -->
     <main>
-      <section>
+      <section class="portfolio-section">
         <div class="container">
           <h1 hidden>buttons</h1>
-          <ul class="list">
+          <ul class="list portfolio-list-buttons">
             <li><button class="button" type="button">All</button></li>
             <li><button class="button" type="button">Web Site</button></li>
             <li><button class="button" type="button">App</button></li>
@@ -69,8 +69,8 @@
 
           <!-- picture section -->
 
-          <ul class="list">
-            <li>
+          <ul class="list portfolio-picture-list">
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/banking.jpg"
