--- a/portfolio.html
+++ b/portfolio.html
@@ -72,16 +72,18 @@
           <ul class="list portfolio-picture-list">
             <li class="portfolio-list-li">
               <a class="link" href="">
-                <img
-                  src="./images/portfoliopictures/banking.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
-                <h2 class="portfolio-picture-title">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-picture-p">App</p></a
+                <div class="portfolio-list-div">
+                  <img
+                    src="./images/portfoliopictures/banking.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="portfolio-picture-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-picture-p">App</p>
+                </div></a
               >
             </li>
             <li>
