--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/cashlespay.jpg"
@@ -94,11 +94,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">Cashless Payment</h2>
-                <p class="portfolio-picture-p">Marketing</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Cashless Payment</h2>
+                  <p class="portfolio-picture-p">Marketing</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/meditapp.jpg"
@@ -106,13 +108,14 @@
                   width="360"
                   height="300"
                 />
-
-                <h2 class="portfolio-picture-title">Meditation App</h2>
-                <p class="portfolio-picture-p">App</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Meditation App</h2>
+                  <p class="portfolio-picture-p">App</p>
+                </div></a
               >
             </li>
 
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/taxi.jpg"
@@ -120,11 +123,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">Taxi Service</h2>
-                <p class="portfolio-picture-p">Marketing</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Taxi Service</h2>
+                  <p class="portfolio-picture-p">Marketing</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/scrillustr.jpg"
@@ -132,11 +137,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">Screen Illustrations</h2>
-                <p class="portfolio-picture-p">Design</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Screen Illustrations</h2>
+                  <p class="portfolio-picture-p">Design</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/online.jpg"
@@ -144,11 +151,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">Online Courses</h2>
-                <p class="portfolio-picture-p">Marketing</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Online Courses</h2>
+                  <p class="portfolio-picture-p">Marketing</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/instagram.jpg"
@@ -156,13 +165,15 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">
-                  Instagram Stories Concept
-                </h2>
-                <p class="portfolio-picture-p">Design</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="portfolio-picture-p">Design</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/organic.jpg"
@@ -170,11 +181,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">Organic Food</h2>
-                <p class="portfolio-picture-p">Web Site</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Organic Food</h2>
+                  <p class="portfolio-picture-p">Web Site</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <a class="link" href="">
                 <img
                   src="./images/portfoliopictures/coffee.jpg"
@@ -182,8 +195,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-picture-title">Fresh Coffee</h2>
-                <p class="portfolio-picture-p">Web Site</p></a
+                <div class="portfolio-list-div">
+                  <h2 class="portfolio-picture-title">Fresh Coffee</h2>
+                  <p class="portfolio-picture-p">Web Site</p>
+                </div></a
               >
             </li>
           </ul>
