--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- section two -->
       <section class="two-section">
         <div class="container">
-          <h2 class="hidden-title" hidden>Strategy</h2>
+          <h2 class="visually-hidden" hidden>Strategy</h2>
           <ul class="list two-list">
             <li class="two-list-li">
               <h3 class="two-title">Strategy</h3>
