--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <main>
       <section class="portfolio-section">
         <div class="container">
-          <h1 hidden>buttons</h1>
+          <h1 class="visually-hidden">buttons</h1>
           <ul class="list portfolio-list-buttons">
             <li><button class="button" type="button">All</button></li>
             <li><button class="button" type="button">Web Site</button></li>
