--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               />
               <div class="four-div">
                 <h3 class="team-title">Mark Guerrero</h3>
-                <p class="p-text">Product Designer</p>
+                <p class="p-texts">Product Designer</p>
               </div>
             </li>
             <li class="team-list">
@@ -157,7 +157,7 @@
               />
               <div class="four-div">
                 <h3 class="team-title">Tom Ford</h3>
-                <p class="p-text">Frontend Developer</p>
+                <p class="p-texts">Frontend Developer</p>
               </div>
             </li>
             <li class="team-list">
@@ -169,7 +169,7 @@
               />
               <div class="four-div">
                 <h3 class="team-title">Camila Garcia</h3>
-                <p class="p-text">Marketing</p>
+                <p class="p-texts">Marketing</p>
               </div>
             </li>
             <li class="team-list">
@@ -181,7 +181,7 @@
               />
               <div class="four-div">
                 <h3 class="team-title">Daniel Wilson</h3>
-                <p class="p-text">UI Designer</p>
+                <p class="p-texts">UI Designer</p>
               </div>
             </li>
           </ul>
