--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
         <a class="logo link" href="./index.html"
           >Web<span class="logo-footer-twopart">Studio</span></a
         >
-        <p>
+        <p class="footer-p">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
